Fix over-sized file

--- a/intro-to-tensorflow/intro_to_tensorflow.ipynb
+++ b/intro-to-tensorflow/intro_to_tensorflow.ipynb
@@ -26,11 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All modules imported.\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "import os\n",
@@ -38,6 +44,7 @@
     "from urllib.request import urlretrieve\n",
     "\n",
     "import numpy as np\n",
+    "\n",
     "from PIL import Image\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelBinarizer\n",
@@ -57,11 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading notMNIST_train.zip...\n",
+      "Download Finished\n",
+      "Downloading notMNIST_test.zip...\n",
+      "Download Finished\n",
+      "All files downloaded.\n"
+     ]
+    }
+   ],
    "source": [
     "def download(url, file):\n",
     "    \"\"\"\n",
@@ -90,11 +107,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████| 210001/210001 [00:45<00:00, 4589.91files/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████| 10001/10001 [00:01<00:00, 5169.02files/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All features and labels uncompressed.\n"
+     ]
+    }
+   ],
    "source": [
     "def uncompress_features_labels(file):\n",
     "    \"\"\"\n",
@@ -164,11 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Problem 1 - Implement Min-Max scaling for grayscale image data\n",
     "def normalize_grayscale(image_data):\n",
@@ -178,6 +215,7 @@
     "    :return: Normalized image data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Min-Max scaling for grayscale image data\n",
+    "    return 0.1 + ( (image_data-0)*(0.9-0.1) ) / (255-0)\n",
     "\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
@@ -202,11 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels One-Hot Encoded\n"
+     ]
+    }
+   ],
    "source": [
     "if not is_labels_encod:\n",
     "    # Turn labels into numbers and apply One-Hot Encoding\n",
@@ -225,11 +269,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training features and labels randomized and split.\n"
+     ]
+    }
+   ],
    "source": [
     "assert is_features_normal, 'You skipped the step to normalize the features'\n",
     "assert is_labels_encod, 'You skipped the step to One-Hot Encode the labels'\n",
@@ -246,11 +296,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving data to pickle file...\n",
+      "Data cached in pickle file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data for easy access\n",
     "pickle_file = 'notMNIST.pickle'\n",
@@ -285,11 +342,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data and modules loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -348,9 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# All the pixels in the image (28 * 28 = 784)\n",
@@ -359,11 +420,11 @@
     "labels_count = 10\n",
     "\n",
     "# TODO: Set the features and labels tensors\n",
-    "# features = \n",
-    "# labels = \n",
+    "features = tf.placeholder(tf.float32)\n",
+    "labels = tf.placeholder(tf.float32)\n",
     "\n",
     "# TODO: Set the weights and biases tensors\n",
-    "# weights = \n",
+    "weights = \n",
     "# biases = \n",
     "\n",
     "\n",
@@ -425,9 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Determine if the predictions are correct\n",
@@ -474,9 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Change if you have memory restrictions\n",
@@ -567,9 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### DON'T MODIFY ANYTHING BELOW ###\n",
@@ -630,9 +685,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
