Time  for training

--- a/intro-to-rnns/Anna_KaRNNa.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa.ipynb
@@ -503,9 +503,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -534,7 +534,7 @@
     "    with tf.variable_scope('softmax'):\n",
     "        # Create the weight and bias variables here\n",
     "        # Outputs random values from a truncated normal distribution.\n",
-    "        softmax_w = tf.Variable(tf.truncated_normal(in_size, out_size), stddev=0.1))\n",
+    "        softmax_w = tf.Variable(tf.truncated_normal(in_size, out_size), stddev=0.1)\n",
     "        softmax_b = tf.Variable(tf.zeros(out_size))\n",
     "    \n",
     "    # Since output is a bunch of rows of RNN cell outputs, logits will be a bunch\n",
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -587,11 +587,11 @@
     "    '''\n",
     "    \n",
     "    # One-hot encode targets and reshape to match logits, one row per sequence per step\n",
-    "    y_one_hot = \n",
-    "    y_reshaped =  \n",
+    "    y_one_hot = tf.one_hot(targets, num_classes)\n",
+    "    y_reshaped = tf.reshape(y+one_hot, logits.get_shape()) \n",
     "    \n",
     "    # Softmax cross entropy loss\n",
-    "    loss = \n",
+    "    loss = tf.nn.softmax_with_cross_entropy_with_logits(logits=logits, labels=y_reshaped)\n",
     "    \n",
     "    return loss"
    ]
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -676,25 +676,25 @@
     "        tf.reset_default_graph()\n",
     "        \n",
     "        # Build the input placeholder tensors\n",
-    "        self.inputs, self.targets, self.keep_prob = \n",
+    "        self.inputs, self.targets, self.keep_prob = build_inputs(batch_size, num_steps)\n",
     "\n",
     "        # Build the LSTM cell\n",
-    "        cell, self.initial_state = \n",
+    "        cell, self.initial_state = build_lstm(lstm_size, batch_size, self.keep_prob)\n",
     "\n",
     "        ### Run the data through the RNN layers\n",
     "        # First, one-hot encode the input tokens\n",
-    "        x_one_hot = \n",
+    "        x_one_hot = tf.one_hot(self.inputs, num_classes)\n",
     "        \n",
     "        # Run each sequence step through the RNN with tf.nn.dynamic_rnn \n",
-    "        outputs, state =\n",
+    "        outputs, state = tf.nn.dynamic_rnn(cell, x_one_hot, initial_state=self.initial_state)\n",
     "        self.final_state = state\n",
     "        \n",
     "        # Get softmax predictions and logits\n",
-    "        self.prediction, self.logits = \n",
+    "        self.prediction, self.logits = build_output(outputs, lstm_size, num_classes)\n",
     "        \n",
     "        # Loss and optimizer (with gradient clipping)\n",
-    "        self.loss =  \n",
-    "        self.optimizer = "
+    "        self.loss = build_loss(self.logits, self.targets, lstm_size, num_classes)\n",
+    "        self.optimizer = build_optimizer()"
    ]
   },
   {
@@ -743,12 +743,22 @@
     "\n",
     ">It is very common in deep learning to run many different models with many different hyperparameter settings, and in the end take whatever checkpoint gave the best validation performance.\n",
     "\n",
-    ">By the way, the size of your training and validation splits are also parameters. Make sure you have a decent amount of data in your validation set or otherwise the validation performance will be noisy and not very informative."
+    ">By the way, the size of your training and validation splits are also parameters. Make sure you have a decent amount of data in your validation set or otherwise the validation performance will be noisy and not very informative.\n",
+    "\n",
+    "four different categories (https://stats.stackexchange.com/questions/187335/validation-error-less-than-training-error/187404#187404):\n",
+    "\n",
+    "Underfitting – Validation and training error high\n",
+    "\n",
+    "Overfitting – Validation error is high, training error low\n",
+    "\n",
+    "Good fit – Validation error low, slightly higher than the training error\n",
+    "\n",
+    "Unknown fit - Validation error low, training error 'high'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -784,14 +794,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow' has no attribute 'placeholders'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-713c857437a4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m model = CharRNN(len(vocab), batch_size=batch_size, num_steps=num_steps,\n\u001b[0;32m      9\u001b[0m                 \u001b[0mlstm_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlstm_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_layers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnum_layers\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m                 learning_rate=learning_rate)\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0msaver\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSaver\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_to_keep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-21-179efb278aa2>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, num_classes, batch_size, num_steps, lstm_size, num_layers, learning_rate, grad_clip, sampling)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[1;31m# Build the input placeholder tensors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtargets\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeep_prob\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbuild_inputs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_steps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[1;31m# Build the LSTM cell\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-13-3d953a7b7d0d>\u001b[0m in \u001b[0;36mbuild_inputs\u001b[1;34m(batch_size, num_steps)\u001b[0m\n\u001b[0;32m      9\u001b[0m     '''\n\u001b[0;32m     10\u001b[0m     \u001b[1;31m# Declare placeholders we'll feed into the graph\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0minputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplaceholders\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint32\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_steps\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'inputs'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[0mtargets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplaceholders\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint32\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_steps\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'targets'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'placeholders'"
+     ]
+    }
+   ],
    "source": [
     "epochs = 20\n",
     "# Print losses every N interations\n",
