Transfer to AWS GPU

--- a/intro-to-rnns/Anna_KaRNNa.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -86,7 +86,7 @@
        "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -125,7 +125,7 @@
        "       79, 57, 81, 13,  0,  0, 33, 78, 61, 74, 81, 76, 64, 65, 70])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -159,7 +159,7 @@
        "83"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -800,26 +800,20 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true,
-    "scrolled": true
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1/20...  Training Step: 50...  Training loss: 3.1433...  0.0838 sec/batch\n",
-      "Epoch: 1/20...  Training Step: 100...  Training loss: 2.7958...  0.0967 sec/batch\n",
-      "Epoch: 1/20...  Training Step: 150...  Training loss: 2.4983...  0.0818 sec/batch\n",
-      "Epoch: 1/20...  Training Step: 200...  Training loss: 2.4779...  0.0808 sec/batch\n",
-      "Epoch: 1/20...  Training Step: 250...  Training loss: 2.4108...  0.0748 sec/batch\n",
-      "Epoch: 1/20...  Training Step: 300...  Training loss: 2.2484...  0.0788 sec/batch\n",
-      "Epoch: 1/20...  Training Step: 350...  Training loss: 2.1579...  0.0937 sec/batch\n",
-      "Epoch: 1/20...  Training Step: 400...  Training loss: 2.1483...  0.1097 sec/batch\n"
+      "Epoch: 1/20...  Training Step: 50...  Training loss: 3.1785...  0.0878 sec/batch\n",
+      "Epoch: 1/20...  Training Step: 100...  Training loss: 2.9373...  0.0788 sec/batch\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "epochs = 20\n",
     "# Print losses every N interations\n",
     "print_every_n = 50\n",
