ignore chckpoint folder

--- a/intro-to-rnns/Anna_KaRNNa.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa.ipynb
@@ -1907,7 +1907,51 @@
       "Epoch: 15/20...  Training Step: 56200...  Training loss: 1.3784...  0.0563 sec/batch\n",
       "Epoch: 15/20...  Training Step: 56250...  Training loss: 1.5526...  0.0561 sec/batch\n",
       "Epoch: 15/20...  Training Step: 56300...  Training loss: 1.5734...  0.0531 sec/batch\n",
-      "Epoch: 15/20...  Training Step: 56350...  Training loss: 1.4917...  0.0561 sec/batch\n"
+      "Epoch: 15/20...  Training Step: 56350...  Training loss: 1.4917...  0.0561 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56400...  Training loss: 1.5329...  0.0533 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56450...  Training loss: 1.5606...  0.0569 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56500...  Training loss: 1.4150...  0.0552 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56550...  Training loss: 1.4239...  0.0562 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56600...  Training loss: 1.3284...  0.0566 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56650...  Training loss: 1.4435...  0.0530 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56700...  Training loss: 1.3292...  0.0539 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56750...  Training loss: 1.5360...  0.0536 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56800...  Training loss: 1.3782...  0.0561 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56850...  Training loss: 1.5679...  0.0552 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56900...  Training loss: 1.5811...  0.0575 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 56950...  Training loss: 1.5438...  0.0583 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57000...  Training loss: 1.5288...  0.0565 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57050...  Training loss: 1.4891...  0.0537 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57100...  Training loss: 1.5043...  0.0540 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57150...  Training loss: 1.5905...  0.0537 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57200...  Training loss: 1.6042...  0.0539 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57250...  Training loss: 1.6439...  0.0535 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57300...  Training loss: 1.4662...  0.0565 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57350...  Training loss: 1.5372...  0.0536 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57400...  Training loss: 1.5331...  0.0539 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57450...  Training loss: 1.3021...  0.0547 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57500...  Training loss: 1.5022...  0.0561 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57550...  Training loss: 1.4926...  0.0539 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57600...  Training loss: 1.3660...  0.0533 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57650...  Training loss: 1.4096...  0.0535 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57700...  Training loss: 1.3301...  0.0530 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57750...  Training loss: 1.4288...  0.0538 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57800...  Training loss: 1.5537...  0.0570 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57850...  Training loss: 1.4450...  0.0542 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57900...  Training loss: 1.4162...  0.0542 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 57950...  Training loss: 1.4017...  0.0529 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58000...  Training loss: 1.6496...  0.0538 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58050...  Training loss: 1.5160...  0.0539 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58100...  Training loss: 1.5875...  0.0550 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58150...  Training loss: 1.3656...  0.0543 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58200...  Training loss: 1.3579...  0.0538 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58250...  Training loss: 1.5706...  0.0536 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58300...  Training loss: 1.4403...  0.0561 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58350...  Training loss: 1.5372...  0.0556 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58400...  Training loss: 1.5147...  0.0559 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58450...  Training loss: 1.4768...  0.0559 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58500...  Training loss: 1.6365...  0.0534 sec/batch\n",
+      "Epoch: 15/20...  Training Step: 58550...  Training loss: 1.4272...  0.0558 sec/batch\n"
      ]
     }
    ],
