--- a/TensorFlow_with_GPU.ipynb
+++ b/TensorFlow_with_GPU.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -84,10 +84,10 @@
      "text": [
       "Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images (batch x height x width x channel). Sum of ten runs.\n",
       "CPU (s):\n",
-      "3.753480445999969\n",
+      "3.280488042999991\n",
       "GPU (s):\n",
-      "0.04237803200004464\n",
-      "GPU speedup over CPU: 88x\n"
+      "0.025573774000008598\n",
+      "GPU speedup over CPU: 128x\n"
      ]
     }
    ],
@@ -149,12 +149,19 @@
     "id": "EY6rTv2TwG6S"
    },
    "source": [
-    "P100, 10 vCPU, 60G RAM (AISE Tensorflow)\n",
+    "__P100, 8 vCPU, 30G RAM (AISE Tensorflow)__\n",
     "CPU (s):\n",
     "3.753480445999969\n",
     "GPU (s):\n",
     "0.04237803200004464\n",
     "GPU speedup over CPU: 88x\n",
+    "\n",
+    "__V100, 10 vCPU, 60G RAM (AISE Tensorflow)__\n",
+    "CPU (s):\n",
+    "3.280488042999991\n",
+    "GPU (s):\n",
+    "0.025573774000008598\n",
+    "GPU speedup over CPU: 128x\n",
     "\n"
    ]
   }
