--- a/TensorFlow_with_GPU.ipynb
+++ b/TensorFlow_with_GPU.ipynb
@@ -84,10 +84,10 @@
      "text": [
       "Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images (batch x height x width x channel). Sum of ten runs.\n",
       "CPU (s):\n",
-      "3.280488042999991\n",
+      "2.13604869400001\n",
       "GPU (s):\n",
-      "0.025573774000008598\n",
-      "GPU speedup over CPU: 128x\n"
+      "0.042926434999998264\n",
+      "GPU speedup over CPU: 49x\n"
      ]
     }
    ],
@@ -155,6 +155,13 @@
     "GPU (s):\n",
     "0.04237803200004464\n",
     "GPU speedup over CPU: 88x\n",
+    "\n",
+    "__P100, 8 vCPU, 104G RAM (AISE Tensorflow)__\n",
+    "CPU (s):\n",
+    "2.13604869400001\n",
+    "GPU (s):\n",
+    "0.042926434999998264\n",
+    "GPU speedup over CPU: 49x\n",
     "\n",
     "__V100, 10 vCPU, 60G RAM (AISE Tensorflow)__\n",
     "CPU (s):\n",
